--- a/src/styles/minesweeper.css
+++ b/src/styles/minesweeper.css
@@ -1,5 +1,7 @@
 
 
+/* Boilerplate */
+
 * {
   margin: 0px;
   padding: 0px;
@@ -14,6 +16,8 @@ body {
   font-family: 'Rubik', sans-serif;
 }
 
+/* Wrapper  */
+
 .wrapper { 
   width: 80%;
   margin-left: auto;
@@ -26,7 +30,9 @@ body {
   background: #80cfa9;
 } 
 
-.header {
+/* Board Header */
+
+.board-header {
   grid-row: 1;
   grid-column: 1 / -1; 
   text-align: center;
@@ -36,11 +42,9 @@ body {
   height: 100px;
 }
 
-#reset {
-  display: block;
-}
+/* Board + Square */
 
-.header > h1 {
+.board-header > h1 {
   font-size: 3rem;
   margin-top: 3rem;
 }
@@ -72,6 +76,30 @@ body {
 .flagged {
   background: #d4c5e2;
 }
+
+/* Sidebar  */
+
+.sidebar {
+  grid-column: 3;
+  grid-row: 2;
+  /* border: 2px black solid; */
+  width: 40%;
+  margin-left: 2rem;
+  font-size: 200%;
+}
+
+#reset {
+  display: block;
+  background: #d4c5e2;
+  margin: 0;
+  padding: 1rem;
+  border: 2px solid #4c6663;
+  font-size: inherit;
+  font-weight: bold;
+  width: 100%;
+}
+
+/* Footer  */
 
 .footer {
   grid-column: 1 / -1;
