--- a/src/styles/minesweeper.css
+++ b/src/styles/minesweeper.css
@@ -1,4 +1,5 @@
 
+/* TODO - fix placement of Game Over message so it doesn't look terrible */
 
 /* Boilerplate */
 
@@ -9,11 +10,16 @@
 
 html {
   font-size: 10px;
+  background-color: #4c6663;
 }
 
 body {
   margin-top: 1rem;
   font-family: 'Rubik', sans-serif;
+}
+
+a {
+  color: #d4c5e2;
 }
 
 /* Wrapper  */
@@ -28,6 +34,7 @@ body {
   grid-row-gap: 1rem;
   grid-column-gap: 1rem;
   background: #80cfa9;
+  border: 10px solid #d4c5e2;
 } 
 
 /* Board Header */
@@ -44,7 +51,7 @@ body {
 
 /* Board + Square */
 
-.board-header > h1 {
+.board-header h1 {
   font-size: 3rem;
   margin-top: 3rem;
 }
@@ -83,7 +90,7 @@ body {
   grid-column: 3;
   grid-row: 2;
   /* border: 2px black solid; */
-  width: 40%;
+  width: 100%;
   margin-left: 2rem;
   font-size: 200%;
 }
@@ -96,7 +103,7 @@ body {
   border: 2px solid #4c6663;
   font-size: inherit;
   font-weight: bold;
-  width: 100%;
+  width: 80%;
 }
 
 /* Footer  */
@@ -108,4 +115,7 @@ body {
   /* background: #4c6663; */
   color: #A7E2E3;
   height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: end;
 }
